[gd_scene load_steps=6 format=3 uid="uid://c5pefett4h1pi"]

[ext_resource type="Texture2D" uid="uid://i7i134lmtupg" path="res://assets/images/card_template.png" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://6jbvf1rh0ia1" path="res://scripts/main.gd" id="1_yvxpq"]
[ext_resource type="Script" uid="uid://bdk2omnxdmyj1" path="res://scripts/game_manager.gd" id="3_lfgxm"]
[ext_resource type="Script" path="res://scripts/combat_manager.gd" id="4_lfgxm"]
[ext_resource type="PackedScene" path="res://scenes/ui.tscn" id="5_lfgxm"]

[node name="Main" type="Node2D"]
script = ExtResource("1_yvxpq")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_0wfyh")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 100.0
text = "重构后的卡牌游戏"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_lfgxm")

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("4_lfgxm")

[node name="HandArea" type="Node2D" parent="."]
position = Vector2(640, 600)

[node name="HandContainer" type="Node2D" parent="HandArea"]

[node name="UI2" parent="." instance=ExtResource("5_lfgxm")]
